--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,12 @@
-# Created by https://www.toptal.com/developers/gitignore/api/python,linux
-# Edit at https://www.toptal.com/developers/gitignore?templates=python,linux
+# Created by https://www.toptal.com/developers/gitignore/api/ros2,python,powershell
+# Edit at https://www.toptal.com/developers/gitignore?templates=ros2,python,powershell
 
-### Linux ###
-*~
+### PowerShell ###
+# Exclude packaged modules
+*.zip
 
-# temporary files which can be created if a process still has a handle open of a deleted file
-.fuse_hidden*
-
-# KDE directory preferences
-.directory
-
-# Linux trash folder which might appear on any partition or disk
-.Trash-*
-
-# .nfs files are created when an open file is removed but is still being accessed
-.nfs*
+# Exclude .NET assemblies from source
+*.dll
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
@@ -188,4 +180,34 @@ poetry.toml
 # LSP config files
 pyrightconfig.json
 
-# End of https://www.toptal.com/developers/gitignore/api/python,linux
+### ROS2 ###
+install/
+log/
+
+# Ignore generated docs
+*.dox
+*.wikidoc
+
+# eclipse stuff
+.project
+.cproject
+
+# qcreator stuff
+CMakeLists.txt.user
+
+srv/_*.py
+*.pcd
+*.pyc
+qtcreator-*
+*.user
+
+*~
+
+# Emacs
+.#*
+
+# Colcon custom files
+COLCON_IGNORE
+AMENT_IGNORE
+
+# End of https://www.toptal.com/developers/gitignore/api/ros2,python,powershell
